[gd_scene load_steps=3 format=3 uid="uid://5l13bksynq1n"]

[ext_resource type="Script" path="res://cat_2_4.gd" id="1_08lar"]
[ext_resource type="Texture2D" uid="uid://ddn5md45au5xl" path="res://images/cat2-4.png" id="1_gif1e"]

[node name="cat2-4" type="Node2D"]
script = ExtResource("1_08lar")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_gif1e")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-256, -167, -249, 171, 107, 168, 107, 1, 251, 0, 252, -167)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
